--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "element-ui": "^2.13.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
+    "reset-css": "^5.0.1",
     "vue": "^2.6.11",
     "vue-echarts": "^5.0.0-beta.0",
     "vue-meta": "^2.4.0",
