--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "//": "https://github.com/vuejs/vue-cli/issues/3065#issuecomment-454373989",
-    "lint:style": "stylelint --fix \"src/**/*.{vue,css,scss}\"",
-    "lint:eslint": "eslint --fix",
-    "lint:markdownlint": "markdownlint",
-    "lint:prettier": "prettier --write --loglevel warn",
-    "lint:stylelint": "stylelint --fix \"src/**/*.{vue,scss}\""
+    "lint:style": "stylelint --fix \"src/**/*.{vue,css,scss}\""
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
@@ -38,12 +34,15 @@
     "@vue/cli-service": "^4.4.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
+    "cross-env": "5.2.x",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "husky": "^6.0.0",
+    "lint-staged": "8.1.x",
     "sass": "^1.30.0",
     "sass-loader": "^8.0.2",
     "style-resources-loader": "^1.3.2",
@@ -55,11 +54,17 @@
     "stylelint-webpack-plugin": "^2.0.0",
     "vue-cli-plugin-style-resources-loader": "~0.1.4",
     "vue-template-compiler": "^2.6.11",
-    "webpack-deadcode-plugin": "^0.1.12",
-    "lint-staged": "8.1.x",
-    "cross-env": "5.2.x"
+    "webpack-deadcode-plugin": "^0.1.12"
   },
-  "gitHooks": {
-    "pre-commit": "cross-env PRE_COMMIT=true lint-staged"
+  "husky": {
+    "hooks": {
+      "pre-commit": "eslint --ext .js,.vue src"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,vue}": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
