--- a/package.json
+++ b/package.json
@@ -15,14 +15,10 @@
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "axios": "^0.21.1",
     "core-js": "^3.6.4",
-    "echarts": "^4.7.0",
-    "element-ui": "^2.13.1",
     "normalize.css": "^8.0.1",
-    "nprogress": "^0.2.0",
     "reset-css": "^5.0.1",
+    "vant": "^2.12.12",
     "vue": "^2.6.11",
-    "vue-echarts": "^5.0.0-beta.0",
-    "vue-meta": "^2.4.0",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
@@ -34,6 +30,7 @@
     "@vue/cli-service": "^4.4.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.3",
     "cross-env": "5.2.x",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
@@ -43,6 +40,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "husky": "^6.0.0",
     "lint-staged": "8.1.x",
+    "postcss-px-to-viewport": "^1.1.1",
     "sass": "^1.30.0",
     "sass-loader": "^8.0.2",
     "style-resources-loader": "^1.3.2",
