--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vant": "^2.12.12",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.4.0",
@@ -41,6 +42,7 @@
     "husky": "^6.0.0",
     "lint-staged": "8.1.x",
     "postcss-px-to-viewport": "^1.1.1",
+    "rimraf": "^3.0.2",
     "sass": "^1.30.0",
     "sass-loader": "^8.0.2",
     "style-resources-loader": "^1.3.2",
